--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,17 @@
 Thumbs.db
 ehthumbs.db
 
+# IDEA files
+.idea/
+*.iml
+
+# Composer files
+vendor/
+composer.lock
+
+# PHPUnit
+reports/
+
 # Folder config file
 Desktop.ini
 
